@@ -1,9 +1,9 @@
 package com.lince.observer.data.javafx;
 
+import com.lince.observer.data.ILinceProject;
 import com.lince.observer.data.legacy.utiles.ResourceBundleHelper;
 import com.lince.observer.data.system.operations.LinceDesktopFileHelper;
 import com.lince.observer.data.util.JavaFXLogHelper;
-import com.lince.observer.legacy.Registro;
 import com.lince.observer.legacy.instrumentoObservacional.Criterio;
 import javafx.application.Platform;
 import javafx.geometry.Insets;
@@ -16,15 +16,31 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 /**
  * Created by Alberto Soto. 7/11/24
  */
 public abstract class GenericExportComponent extends BorderPane {
     private static final Logger log = LoggerFactory.getLogger(GenericExportComponent.class);
-    public GenericExportComponent() {
+    ILinceProject linceProject = null;
+    private final UUID researchUUID;
+
+    protected GenericExportComponent(UUID observerId) {
+        this.researchUUID = observerId;
         initComponents();
+    }
+
+    public UUID getResearchUUID() {
+        return researchUUID;
+    }
+
+    public ILinceProject getLinceProject() {
+        return linceProject;
+    }
+
+    public void setLinceProject(ILinceProject linceProject) {
+        this.linceProject = linceProject;
     }
 
     void initComponents() {
@@ -56,9 +72,9 @@ public abstract class GenericExportComponent extends BorderPane {
                                  ExportFunction exportFunction,
                                  String fileExtension) {
         List<Criterio> selectedData = selectionPanelComponent.getSelectedElements().stream()
-                .filter(obj -> obj instanceof Criterio)
-                .map(obj -> (Criterio) obj)
-                .collect(Collectors.toList());
+                .filter(Criterio.class::isInstance)
+                .map(Criterio.class::cast)
+                .toList();
 
         if (selectedData.isEmpty()) {
             JavaFXLogHelper.showMessage(Alert.AlertType.INFORMATION,
@@ -67,12 +83,12 @@ public abstract class GenericExportComponent extends BorderPane {
             return;
         }
 
-        if (Registro.getInstance().getRowCount() == 0) {
+      /*  if (Registro.getInstance().getRowCount() == 0) {
             JavaFXLogHelper.showMessage(Alert.AlertType.INFORMATION,
                     ResourceBundleHelper.getI18NLabel("LINCE"),
                     ResourceBundleHelper.getI18NLabel("CURRENT_REGISTER_HAS_NO_ROWS"));
             return;
-        }
+        }*/
 
         Platform.runLater(() -> {
             File file = LinceDesktopFileHelper.openSaveFileDialog(fileExtension);
